--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Styles -->
   <link rel="stylesheet" href="styles/main.css">
+
   <title>Turkish Website</title>
 </head>
 
@@ -46,7 +51,29 @@
   <!-- Referans start -->
   <section class="referans-section">
     <div class="container">
-
+        <h1>Referanslarımız</h1>
+        <p>Bize güvenen ve beraber çalıştığımız iş ortaklarımız</p>
+        <div class="referans-logoes">
+          <div class="referans-logo">
+            <a href="#0"><img src="./images/referans-logo1.svg" alt=""></a>
+          </div>
+          <div class="referans-logo">
+            <a href="#0"><img src="./images/referans-logo2.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo3.svg" alt=""></a>
+          </div>
+          <div class="referans-logo">
+            <a href="#0"><img src="./images/referans-logo4.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo5.svg" alt=""></a>
+            <a href="#logoes"><span>Tümünü Gör</span><i class="fa-solid fa-arrow-right"></i></a>
+          </div>
+          <div class="referans-logo">
+            <a href="#0"><img src="./images/referans-logo7.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo8.svg" alt=""></a>
+          </div>
+          <div class="referans-logo">
+            <a href="#0"><img src="./images/referans-logo9.svg" alt=""></a>
+          </div>
+        </div>
     </div>
   </section>
   <!-- Referans end -->
