Added Key Section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,54 @@
   <!-- Key start -->
   <section class="key-section">
     <div class="container">
-
+      <div class="key-header">
+        <h1>Kalite ve Süreç Yönetimi</h1>
+        <p>Müşterilerimizin yüksek kalite seviyelerini koruyabilmeleri için farklı sektörlerde tecrübe kazanmış uzman kadrolarımızla Proje Yönetimi, İş Analizi ve Test Yönetimi hizmetleri sunmaktayız.</p>
+      </div>
+      <div class="key-main">
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-file.svg" alt="File" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-start.svg" alt="Start" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-crown.svg" alt="Crown" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-chart-one.svg" alt="Chart" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-chart-pie-slice.svg" alt="chart-pie-slice" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+        <div class="key-main-box">
+          <div class="key-main-box-image">
+            <img src="images/main-figma-logo.svg" alt="figma-logo" loading="lazy">
+          </div>
+          <h1> Döküman Analizi </h1>
+          <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Key end -->
