--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <!-- Key start -->
   <section class="key-section">
     <div class="container">
-
     </div>
   </section>
   <!-- Key end -->
@@ -38,6 +37,32 @@
   <!-- Information start -->
   <section class="information-section">
     <div class="container">
+
+
+      <div class="kalit-section-child">
+        <div class="kalit-child-left">
+          <h1 class="key-left-h1">Kalite ve Süreç <br> Yönetimi</h1>
+          <p class="parag-left">Deneyimli kadromuz; birçok farklı sektörden deneyimli, PMP® <br> sertifikasına sahip,
+            uzman proje
+            yöneticilerinden oluşmaktadır. <br> Projelerinizin yönetimine destek olmak, zayıf olduğunu düşündüğünüz <br>
+            alanları güçlendirmek, uluslararası geçerliliği olan PMI® metodolojisini <br> şirketinizde uygulamak ve
+            geliştirmek için yanınızdayız.</p>
+          <button class="btn">Keşfet</button>
+          <img src="./images/key-sec-photo-1.jpg" alt="key-section" loading="lazy">
+        </div>
+        <div class="kalit-child-right">
+          <img src="./images/key-sec-photo-2.jpg" alt="key-section" loading="lazy">
+          <h1 class="key-right-h1">Test Yönetimi ve <br> Analizi</h1>
+          <p>Danışmanlığını yürüttüğümüz projelerde yazılım hatalarını önlemek <br> amacıyla gerçekleştirdiğimiz
+            testleri her proje aşamasında manuel ya <br> da test otomasyonu ile dikkatle uygulamaktayız. Deneyimli test
+            <br> ekibimiz, kurumlara yüksek kalitede yazılım testleri hizmeti ile baştan <br> sona güvenli, kaliteli ve
+            tatmin edici bir müşteri deneyimi sunmaktadır.
+          </p>
+          <button class="btn">Keşfet</button>
+        </div>
+      </div>
+
+
 
     </div>
   </section>
