Footer qismi qilindi

--- a/index.html
+++ b/index.html
@@ -64,6 +64,52 @@
   <footer class="footer-section">
     <div class="container">
 
+        <div class="footer-box">
+          <div class="footer-section-1">
+            <h4><a href="#0">Çözüm ve Hizmetler</a></h4>
+            <p><a href="#0">Yazılım Geliştirme</a></p>
+            <p><a href="#0">Outsourcing</a></p>
+            <p><a href="#0">Kalite ve Süreç Yönetimi</a></p>
+            <p><a href="#0">Danışmanlık</a></p>
+            <p><a href="#0">IoT Destekli Çözümler</a></p>
+          </div>
+  
+          
+          <div class="footer-section-2">
+            <h4><a href="#0">Ürünler</a></h4>
+            <p><a href="#0">Eğitim Yönetim Sistemi</a></p>
+            <p><a href="#0">İnsan Sermayesi Yönetim Sistemi</a></p>
+            <p><a href="#0">Müşteri İlişkileri Yönetim Sistemi</a></p>
+            <p><a href="#0">İçerik Yönetim Sistemi</a></p>
+          </div>
+  
+  
+          <div class="footer-section-3">
+            <h4><a href="#0">Kurumsal</a></h4>
+            <p><a href="#0">Hakkımızda</a></p>
+            <p><a href="#0">Belge ve Yetkinlikler</a></p>
+            <p><a href="#0">İş Ortakları</a></p>
+          </div>
+  
+  
+          <div class="footer-section-4">
+            <h4><a href="#0">İletişim</a></h4>
+            <p><a href="#0">Bilgi İstek Formu</a></p>
+            <p><a href="#0">Uzman Talep Formu</a></p>
+          </div>
+        </div>
+
+
+        <div class="footer-bottom-box">
+          <div><p><a href="#0">© Copyright 2010-2021 - Can Çevik</a></p></div>
+          <div class="footer-right-logo">
+                <p><a href="#0"><img src="./images/MediumLogo.svg" alt="MediumLogo" loading="lazy"></a></p>
+                <p><a href="#0"><img src="./images/InstagramLogo.svg" alt="InstagramLogo" loading="lazy"></a></p>
+                <p><a href="#0"><img src="./images/TwitterLogo.svg" alt="TwitterLogo" loading="lazy"></a></p>
+                <p><a href="#0"><img src="./images/LinkedinLogo.svg" alt="LinkedinLogo" loading="lazy"></a></p>
+                <p><a href="#0"><img src="./images/FacebookLogo.svg" alt="FacebookLogo" loading="lazy"></a></p>
+          </div>
+        </div>
     </div>
   </footer>
   <!-- Footer end -->
