--- a/index.html
+++ b/index.html
@@ -30,7 +30,31 @@
   <!-- Test start -->
   <section class="test-section">
     <div class="container">
-
+      <div class="test-section-name">
+        <h1>
+          Test Yönetimiyle Neler Sağlıyoruz?
+        </h1>
+        <p>
+          IoT Destekli Çözümler
+        </p>
+      </div>
+      <div class="test-section-footer">
+        <div class="test-section-text1">Yazılım Kalitesini
+          Arttırıyoruz</div>
+      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
+      </div>
+      <div class="test-section-text1">Olası Hataları Önceden
+        Belirliyoruz</div>
+      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
+      </div>
+      <div class="test-section-text1">Oluşabilecek Riskleri
+        Önlüyoruz</div>
+      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
+      </div>
+      <div class="test-section-text1">Zaman ve Maliyetten
+        Tasarruf Sağlıyoruz</div>
+    </div>
+  </div>
     </div>
   </section>
   <!-- Test end -->
