Footerga o'zgartirishlar kiritildi

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
 
         <div class="footer-bottom-box">
-          <div><p><a href="#0">© Copyright 2010-2021 - Can Çevik</a></p></div>
+          <div class="footer-copyright"><p><a href="#0">© Copyright 2010-2021 - Can Çevik</a></p></div>
           <div class="footer-right-logo">
                 <p><a href="#0"><img src="./images/MediumLogo.svg" alt="MediumLogo" loading="lazy"></a></p>
                 <p><a href="#0"><img src="./images/InstagramLogo.svg" alt="InstagramLogo" loading="lazy"></a></p>
