--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <!-- Header start -->
-  <header class="header-section">
+  <!-- <header class="header-section">
     <div class="container">
       <div class="navbar">
         <ul>
@@ -52,7 +52,7 @@
         <button type="submit" class="btn header-btn">Kayıt Ol</button>
       </div>
     </div>
-  </header>
+  </header> -->
   <!-- Header end -->
 
   <!-- Key start -->
@@ -86,23 +86,23 @@
         <p>Bize güvenen ve beraber çalıştığımız iş ortaklarımız</p>
         <div class="referans-logoes">
           <div class="referans-logo">
-            <a href="#0"><img src="./images/referans-logo1.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo1.svg" alt="logo" loading="lazy"></a>
           </div>
           <div class="referans-logo">
-            <a href="#0"><img src="./images/referans-logo2.svg" alt=""></a>
-            <a href="#0"><img src="./images/referans-logo3.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo2.svg" alt="logo"  loading="lazy"></a>
+            <a href="#0"><img src="./images/referans-logo3.svg" alt="logo"  loading="lazy"></a>
           </div>
           <div class="referans-logo">
-            <a href="#0"><img src="./images/referans-logo4.svg" alt=""></a>
-            <a href="#0"><img src="./images/referans-logo5.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo4.svg" alt="logo"  loading="lazy"></a>
+            <a href="#0"><img src="./images/referans-logo5.svg" alt="logo"  loading="lazy"></a>
             <a href="#logoes"><span>Tümünü Gör</span><i class="fa-solid fa-arrow-right"></i></a>
           </div>
           <div class="referans-logo">
-            <a href="#0"><img src="./images/referans-logo7.svg" alt=""></a>
-            <a href="#0"><img src="./images/referans-logo8.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo7.svg" alt="logo"  loading="lazy"></a>
+            <a href="#0"><img src="./images/referans-logo8.svg" alt="logo"  loading="lazy"></a>
           </div>
           <div class="referans-logo">
-            <a href="#0"><img src="./images/referans-logo9.svg" alt=""></a>
+            <a href="#0"><img src="./images/referans-logo9.svg" alt="logo"  loading="lazy"></a>
           </div>
         </div>
     </div>
