xatolar to'g'irlandi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <!-- Header start -->
-  <!-- <header class="header-section">
+  <header class="header-section">
     <div class="container">
       <div class="navbar">
         <ul>
@@ -52,7 +52,7 @@
         <button type="submit" class="btn header-btn">Kayıt Ol</button>
       </div>
     </div>
-  </header> -->
+  </header>
   <!-- Header end -->
 
   <!-- Key start -->
