FINISH:Start-section end

--- a/index.html
+++ b/index.html
@@ -122,14 +122,11 @@
         </p>
       </div>
       <div class="test-section-footer">
-        <div class="test-section-text1">Yazılım Kalitesini
-          Arttırıyoruz</div>
-      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
+        <div class="test-section-text1">Yazılım Kalitesini Arttırıyoruz</div>
+        <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
       </div>
-      <div class="test-section-text1">Olası Hataları Önceden
-        Belirliyoruz</div>
-      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
-      </div>
+      <div class="test-section-text1">Olası Hataları Önceden Belirliyoruz</div>
+      <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy"></div>
       <div class="test-section-text1">Oluşabilecek Riskleri
         Önlüyoruz</div>
       <div class="test-section-text"><img src="./images/CaretCircleDoubleRight.png" alt="text emag" loading="lazy">
