FINISH: Key section

--- a/index.html
+++ b/index.html
@@ -209,13 +209,12 @@
     <div class="container">
 
       <div class="group7">
-        <div class="user">    
-        <img class="connection-user" src="./images/bize-ulasin.png" alt="dustlar" loading="lazy">
-        <img class="connection-user-alana" src="./images/connection-section_userdagi-rangli-aylana.svg" alt="aylana" loading="lazy">
-      </div>  
+        <div class="user">
+          <img class="connection-user" src="./images/bize-ulasin.png" alt="dustlar" loading="lazy">
+        </div>  
             <h1 class="bize-ulasin">Bize Ulaşın</h1>
-            <h4 class="cozum">Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle irtibata geçin.</h4>
-            <button class="bize-ulasin-button"><h2 class="button-text-1">Bize Ulaşın</h2><h3 class="button-text-2">Teşekkürler</h3></button>
+            <p class="cozum">Çözüm, hizmet ve ürünlerimiz hakkında detaylı bilgi için bizimle irtibata geçin.</p>
+            <button class="bize-ulasin-button">Bize Ulaşın</button>
       </div>
 
     </div>
